--- a/gb/25/4/28/n14494028.md
+++ b/gb/25/4/28/n14494028.md
@@ -16,33 +16,33 @@
 <p>（本文参考了CNN和《卫报》报导）</p>
 <p>责任编辑：林妍#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275401.md#1">中国游客无法回到全球旅游市场 原因有三</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298583.md#1">游客过多 日本餐厅想出一招来应对</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420890.md#1">中国游客在北海道铁轨拍照 被列车撞亡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/27/n14423616.md#1">经济低迷 中国游客不再狂买 日商改变策略</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/3/n11022591.md#1" target="_blank">玉清心：物理大师束星北 一曲悲怆的挽歌</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/22/n10581061.md#1" target="_blank">法轮功义务传功遍全球 事实亲历揭穿中共诽谤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/12/n11584537.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（二）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/13/n11042473.md#1" target="_blank">感恩李洪志大师 中西方民众的故事</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/31/n14626955.md#1">“放下之后，你且看他” 读《过松源晨炊漆公店》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625596.md#1">喜来登酒店女继承人分享家族企业成功的秘诀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626157.md#1">乐在其中的生命境界——解读陶渊明《五柳先生传》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/10/n14613873.md#1">人在画中游 是梦境还是仙境？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/31/n14627235.md#1">把苦熬成甜 把山走成路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/6/n14630481.md#1">【直播】卢比奥为中亚五国外长举行欢迎会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/5/n14630331.md#1">【新闻大家谈】韩总统笑讽中共 习爆回：查后门</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/6/n14630742.md#1">【直播】转折点巡回至奥本大学 川普次子演讲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628835.md#1">一周33家门店关闭 大陆线下闭店潮加剧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/4/n14629037.md#1">张又侠张升民同露面 军中权斗动向引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627881.md#1">改变世界走向的五大战役重写人类历史</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628907.md#1">赵露思推全新英语歌 获Lady Gaga班底助攻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/4/n14629626.md#1">唐嫣新剧遭撤档 传与王家卫录音档事件有关</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/4/n14629668.md#1">范冰冰不避讳敏感话题 直指中国影坛弊端</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/5/n14630365.md#1">传范冰冰遭中国评审做局 东京影展封后梦碎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628867.md#1">39岁大陆男星李茂自曝：去年被亲戚骗光积蓄</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/5/n14629825.md#1">为什么飞行员在通讯时会说“Roger”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628335.md#1">喝茶人必懂的六大茶类</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/4/n14629241.md#1">专家：日本人这个饮食习惯有助于减重</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627746.md#1">烤塔可饼大受欢迎 口感酥脆 每天吃也不腻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628537.md#1">为何男性要比女性多运动 才有相同护心效果？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/26/n14492521.md#1">【品读唐诗】孟浩然的岘山第一诗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635971.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（下）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650187.md#1">【百年真相】从校园风潮到抗日殉难：杨荫榆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650190.md#1">【直播】川普主持肯尼迪中心荣誉奖章颁奖典礼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650233.md#1">【直播】澳洲和日本国防部长会谈后举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648906.md#1">越来越多人开始出售黄金和白银</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649965.md#1">阿里持续出售旗下资产 已套现300亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649848.md#1">北京白羽鸟“平平”死亡 引政治联想</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649161.md#1">佘诗曼自曝已立遗嘱 逾两亿资产将按意愿分配</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649451.md#1">“F4”回归少1人 换周杰伦、阿信助攻推新歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646628.md#1">提前“做一个动作” 减少收纳的厌烦感</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649505.md#1">和妈妈一起幸福小旅行 ─ 新竹美食篇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648983.md#1">那一滴千年香气： Attar精油为何与众不同？</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/4/28/n14494028.htm">中国留学生登富士山遇险获救 为何又被救一次</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/4/28/n14494028.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
