--- a/gb/22/11/19/n13869142.md
+++ b/gb/22/11/19/n13869142.md
@@ -5,70 +5,73 @@
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/11/id13858491-000_32LY2V2_111-600x400.jpg" />
 <h6>2022年10月23日，中共二十大政治局常委出炉，一名警察在人民大会堂外守候。(Noel Celis/AFP)</h6>
 <hr>
-	<p>【大纪元2022年11月19日讯】（大纪元记者宁海钟、骆亚报导）中共二十大报告突然强调“马克思主义同中华文化相结合”，以及加强相关的大外宣。类似提法在历届党代会报告，包括中共十九大都没有。新任中宣部长李书磊被指是这套计划的操盘者。专家们认为，中共的最新举动涉及进一步毒害人类的“文化阴谋”，同时是为了给其专制统治续命。</p>
+	<p>【大纪元2022年11月19日讯】（大纪元记者宁海钟、骆亚报导）中共二十大报告突然强调“马克思主义同中华文化相结合”，以及加强相关的大外宣。类似提法在历届党代会报告，包括中共十九大都没有。新任中宣部长李书磊被指是这套计划的操盘者。专家们认为，中共的最新举动涉及进一步毒害人类的“文化阴谋”，同时是为了给其专制统治续命。
+</p>
 <h2>中共二十大上“一个文化阴谋”</h2>
-<p>中共二十大于上月闭幕，大纪元记者日前发现，中共二十大报告专设一节讲“马克思主义中国化时代化”，大谈马克思主义“必须同中华优秀传统文化相结合”，且放在较显要位置。另一部分内容则强调利用中华文化作为大外宣的功能，即所谓“讲好中国故事”。而过往历届中共党代会报告并没有这方面内容。比如，五年前的中共十九大报告，文化部分放在更后的部分，并且只强调文化自信，也没有提马克思主义和中华文化的结合。</p>
+<p>
+中共二十大于上月闭幕，大纪元记者日前发现，中共二十大报告专设一节讲“马克思主义中国化时代化”，大谈马克思主义“必须同中华优秀传统文化相结合”，且放在较显要位置。另一部分内容则强调利用中华文化作为大外宣的功能，即所谓“讲好中国故事”。而过往历届中共党代会报告并没有这方面内容。比如，五年前的中共十九大报告，文化部分放在更后的部分，并且只强调文化自信，也没有提马克思主义和中华文化的结合。</p>
 <p>有关中共在破坏中国传统文化，人们时常引用文化大革命为例子。但近年中共似乎重视利用传统文化，如“国学”兴起，曾引发一些中国传统文化复兴的想像，也有人认为这是中共隐秘地破坏传统文化。现在中共正式提出马克思主义和“中华优秀传统文化相结合”，又是什么意图？</p>
 <p>旅澳历史学者李元华11月19日对大纪元表示：中共知道马克思主义在中国没有人去相信了，所以才搞出了所谓和中华传统文化相结合的这个不伦不类的东西。这是偷换概念，更具有欺骗性，其实是一个洗脑阴谋。因为它觉得只有把这两者结合，共产党才能续命，光讲马克思主义，在当今的中国社会，已没有任何一个人去相信。</p>
-<p>李元华说，中共历史上一直在破坏中国传统文化，“反右”就是打击知识分子，文革期间正式全面系统地破坏中国传统文化，“批林批孔”，歪曲中国历史，或者说歪讲中国历史，把中华5000年的传统文明，描写为黑暗的社会，把它自己说成什么新中国。而改革开放之后出现的国学热，本身是因为有些学者看到了传统文化的价值。但中共看到了国学热的倾向后，它就要去嫁接、利用，把抽离对神的信仰等真正精华后的所谓“国学”，和讲无神论的马克思主义嫁接在一起，再去继续欺骗老百姓。</p>
+<p>李元华说，中共历史上一直在破坏中国传统文化，“反右”就是打击知识分子，文革期间正式全面系统地破坏中国传统文化，“批林批孔”，歪曲中国历史，或者说歪讲中国历史，把中华5000年的传统文明，描写为黑暗的社会，把它自己说成什么新中国。而改革开放之后出现的国学热，本身是因为有些学者看到了传统文化的价值。但中共看到了国学热的倾向后，它就要去嫁接、利用，把抽离对神的信仰等真正精华后的所谓“国学”，和讲无神论的马克思主义嫁接在一起，再去继续欺骗老百姓。
 <h2>李书磊被曝操盘“马克思主义和中国文化嫁接”</h2>
-<p>中共政治局常委王沪宁是“笔杆子”出身，获江、胡、习三代中共领导人重用，他一直被认为是党魁背后的“师爷”。二十大后王沪宁仍留任常委。出身中央党校的李书磊在二十大升入政治局，他被认为是王沪宁的“师爷”角色的替代者。</p>
+中共政治局常委王沪宁是“笔杆子”出身，获江、胡、习三代中共领导人重用，他一直被认为是党魁背后的“师爷”。二十大后王沪宁仍留任常委。出身中央党校的李书磊在二十大升入政治局，他被认为是王沪宁的“师爷”角色的替代者。</p>
 <p>58岁的李书磊曾在北京大学中文系读硕士、博士。在中央党校文史教研部工作多年，后曾任中央党校副校长，时任党校校长是习近平。李书磊现任中央政治局委员、中央书记处书记、中宣部部长。</p>
 <p>流亡美国的前中央党校教授蔡霞，11月7日在汪浩主持的华视“三国演义”论政节目中披露，李书磊二十大能够上到政治局位置，与他研究“马克思主义和中国文化嫁接”，为中共意识形态“续命”有关。</p>
 <p>她说，在所谓改革开放以后，马克思主义、毛泽东思想，实际上在全党已经被抛弃了，人们已经不相信它，但是中共又是一个号称马克思主义的政党，它这个老祖宗又不能丢，他们就想怎么把马克思主义和中国文化嫁接起来。</p>
 <p>“这件事情其实在中央党校做了很多年了，大概90年代后期开始的。而李书磊那个时候是我们学校的文史部的主任，关于文化建设这种问题是他抓的。他自己也是北大中文系毕业，在中国文化的研究和积累上，是有相当功底的，在中共中央党校又工作多年，所以他对这两方面都不陌生。”</p>
 <p>蔡霞认为，正因为意识形态是习近平特别看重的，所以李书磊现在获得重用。</p>
-<figure id="attachment_13862683" aria-describedby="caption-attachment-13862683" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13862683-GettyImages-1083179788.jpg"><img decoding="async" class="size-large wp-image-13862683" src="https://i.epochtimes.com/assets/uploads/2022/11/id13862683-GettyImages-1083179788-600x359.jpg" alt="" width="600" b="359" /></a><figcaption id="caption-attachment-13862683" class="wp-caption-text">2019年1月16日，在马尼拉举行的新闻发布会上，时任中共国家监察委员会副主任李书磊（右）讲话。(Ted Aljibe/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_13862683" aria-describedby="caption-attachment-13862683" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13862683-GettyImages-1083179788.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-13862683" src="https://i.epochtimes.com/assets/uploads/2022/11/id13862683-GettyImages-1083179788-600x359.jpg" alt="" width="600" b="359"></a><figcaption id="caption-attachment-13862683" class="wp-caption-text">2019年1月16日，在马尼拉举行的新闻发布会上，时任中共国家监察委员会副主任李书磊（右）讲话。(Ted Aljibe/AFP via Getty Images)</figcaption></figure>
 <p>李元华对大纪元说，像李书磊这样所谓的学者，是文革之后读的研究生，他们接触的所谓传统文化是被中共篡改过的，中共的高等学府里，真正尊重传统，敬重先贤留下的做人道理的学者少之又少，而在所谓历史唯物主义观下的传统文化学习，不是真正的传统文化。这些学者只是套用了传统文化里的一些术语、概念，混合马克思主义的一些学说，搞出了一些不伦不类的东西。</p>
 <p>“他们不能说是真正的中国传统文化的学者，只能说是在党文化滋养下的会运用传统文化术语和概念的人。”</p>
-<p>李元华说，中共一直重视谎言的编造，需要用一些有理论修养的人，包括王沪宁和李书磊这些人。习近平需要有人帮他涂脂抹粉，就看中了李书磊这方面的特长。</p>
+<p>李元华说，中共一直重视谎言的编造，需要用一些有理论修养的人，包括王沪宁和李书磊这些人。习近平需要有人帮他涂脂抹粉，就看中了李书磊这方面的特长。
 <h2>中共大外宣用“中国文化”给习外访配套 学者批谄媚文化</h2>
-<p>中共二十大后，李书磊推动的一套大外宣计划似乎已经开始了。他11月10日在党媒发表文章，再次强调二十大报告有关中共文化建设的内容。</p>
+中共二十大后，李书磊推动的一套大外宣计划似乎已经开始了。他11月10日在党媒发表文章，再次强调二十大报告有关中共文化建设的内容。</p>
 <p>11月15日，中央党校教授、“马克思主义中国化研究所”所长王虎学接受官媒采访，大谈“马克思主义同中华文化相结合”。</p>
 <p>近日随着习近平出访印尼和泰国，官媒报导，央视专题片《习近平喜欢的典故》（印尼语版、泰语版），14日起在印尼、泰国两家电视台陆续播出。该片内容是习近平引用过的中国古代名言名句和经典故事，官媒声称显示习近平对“中华优秀传统文化”的深刻理解。</p>
 <p>对此，台湾政大国际关系研究中心资深研究员宋国诚教授11月18日对大纪元表示，中共这种出品，只能算是针对习近平思想的一种谄媚文化、太监文化。</p>
 <p>他说，一个国家如果本身有文化的素养和文化魅力，所建构出来理念和价值观，自然能够获得世界各国尊重和跟随。而不是像中共这样自吹自擂。“你经济强大了、武力增强了，就叫做文化自信增加了？这其实是一种文化自卑。”</p>
 <p>宋国诚举例说，中共在全世界推动所谓的孔子学院，遭到了很多国家的抵制，甚至是把它关闭。</p>
 <p>近年中共向外输出的“中国文化”项目，孔子学院、鲁班工坊都是代表之一，不过其统战和间谍功能受到外界质疑。其中孔子学院在引起西方警惕后陆续关闭，但又改头换面存在。</p>
-<figure id="attachment_13294766" aria-describedby="caption-attachment-13294766" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13294766-521365.jpg"><img decoding="async" class="size-large wp-image-13294766" src="https://i.epochtimes.com/assets/uploads/2021/10/id13294766-521365-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-13294766" class="wp-caption-text">图为2014年6月11日，民众反对孔子学院进入多伦多所举行的请愿活动。（周行／大纪元）</figcaption></figure>
+<figure id="attachment_13294766" aria-describedby="caption-attachment-13294766" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13294766-521365.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-13294766" src="https://i.epochtimes.com/assets/uploads/2021/10/id13294766-521365-600x399.jpg" alt="" width="600" b="399"></a><figcaption id="caption-attachment-13294766" class="wp-caption-text">图为2014年6月11日，民众反对孔子学院进入多伦多所举行的请愿活动。（周行／大纪元）</figcaption></figure>
 <p>李元华说，中共的孔子学院，在被大家识破实质后，就变成了各类所谓的中国文化中心、培训中心，包括最近受关注的鲁班工坊，都是在输出中共的党文化，去毒害海外热爱中国传统文化的人，同时培植支持中共的海外人员，渗透西方社会。国际社会应该充分认识到，中共的所谓文化机构，不管它取什么名字，都是中共的特务机构，把中共的党文化扩散到世界，毒害全人类。</p>
 <p>台湾政治大学国家发展研究所教授李酉潭18日对大纪元表示，西方这几年已越来越觉醒，“西方越来越多人知道原来所谓的孔子学院，是没有孔子思想的”。</p>
 <p>李酉潭认为，中共想要控制所有人，但是它不可能成功。它说“讲好中国（中共）故事”，但大家都非常清楚中共的故事是什么东西，不可能再受骗了。</p>
-<p>“它说要讲好中国（中共）故事，但那是不用讲的，因为它的所作所为，就在破坏它。包括用清零政策迫害人民，让西方国家看得越来越清楚了。还有他们那种竭泽而渔的发展经济方式，最后整个资源被共产党拿走，不是将利益给人民，而是为了有助于它对外霸权的实现，它可以对台湾统战或者对全世界统战，大笔花钱。”李酉潭说。</p>
+<p>“它说要讲好中国（中共）故事，但那是不用讲的，因为它的所作所为，就在破坏它。包括用清零政策迫害人民，让西方国家看得越来越清楚了。还有他们那种竭泽而渔的发展经济方式，最后整个资源被共产党拿走，不是将利益给人民，而是为了有助于它对外霸权的实现，它可以对台湾统战或者对全世界统战，大笔花钱。”李酉潭说。
 <h2>学者：中共为保专制统治搞文化嫁接</h2>
-<p>据中共官媒称，所谓的“马克思主义中国化”，毛泽东最早提出，邓、江、胡的“理论”也被归入，包括“中国特色社会主义”。“马克思主义中国化”这个概念在习近平上台后更多使用，二十大上则明确提出将马克思主义和中华文化结合。</p>
+据中共官媒称，所谓的“马克思主义中国化”，毛泽东最早提出，邓、江、胡的“理论”也被归入，包括“中国特色社会主义”。“马克思主义中国化”这个概念在习近平上台后更多使用，二十大上则明确提出将马克思主义和中华文化结合。</p>
 <p>宋国诚教授本身是一位在台湾研究马克思主义数十年的专家。他说自己的博士论文就是写马克思主义的。他对大纪元表示，中共的所谓马克思主义中国化，是一种拼凑化，牵强附会，因为共产党的夺权的过程，其实是通过欺骗农民所造成的农民运动。</p>
 <p>李酉潭教授则告诉大纪元，中共高调提“马克思主义中国化”，这符合了中共要用极权专制来打败自由民主世界的政治需要，也就是习近平所说的“东升西降”。</p>
 <p>李酉潭说，中共从搞一带一路，在南海建岛礁，再到以黑道治国，把香港反送中民主运动打压下去。包括之前对法轮功、对基督教，以及对西藏、新疆、内蒙古的打压，到现在对台湾的压迫，都暴露出中共政权的专制性质。</p>
 <p>“共产党想要永远统治。将人类有史以来所有有助于它实施专制霸权的思想，全部结合在一起，就是它想要的东西。”李酉潭说。</p>
 <p>责任编辑：孙芸</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580683.md#1">《霹雳火》演员秦杨张凤书 隔20年同台再交锋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580638.md#1">全球OTT颁奖 台明星云集 林廷忆摘最佳新人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580623.md#1">贝克汉一家乘坐高价游艇游意大利 次子晒度假照</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580541.md#1">金钟60主持 Lulu接节目类 曾宝仪负责戏剧类</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/3/n10686541.md#1" target="_blank">古玉文：名流上书中共的伤痕往事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/11/n10473939.md#1" target="_blank">受化学毒剂侵害 越战老兵绝望中见证奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/21/n10990583.md#1" target="_blank">林辉：岳飞忠魂千古颂 中共侮辱英雄可憎</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/24/n11136773.md#1" target="_blank">捷克参议院通过决议案 要求中共停止迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/23/n10659446.md#1">节气“处暑”是什么意思？ 处暑出伏中元添福！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4592934.md#1">潜龙隐迹辽东郡 名士风流厉冰雪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579766.md#1">【未解之谜】考古还是盗墓？开挖皇陵 诡异事件频现</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/8/n14569774.md#1">【古道人生】女子忍辱负重为夫家保后代</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/21/n14578146.md#1">一片叶落，是风的无情或树的无心还是叶子本身的无意?</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580914.md#1">【新闻大破解】俄乌和谈五方博弈 联动台海</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/5/n13697943.md#1">【神韵原创音乐】2019 神韵交响乐《传神》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579508.md#1">亿万富翁不把钱存储蓄账户 他们放在哪里</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579820.md#1">波音空客潜在订单泄漏商飞C919何种困境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579804.md#1">在Costco买这六种商品 为何你或感到后悔</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/22/n14579291.md#1">成本超3000万 郭富城主演新片首日票房仅5万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579822.md#1">杨洋凭武打戏再翻红 自曝严重腿伤需终生复健</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579431.md#1">犬青被评论“颜值忽高忽低” 云安急召歌迷喊话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579795.md#1">【漂流传奇】李尚正：从星爷配角到台柱主持</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579837.md#1">遗书爆陆综平台分帐黑幕 28岁导演轻生未遂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/24/n14579978.md#1">为什么有些衣服洗了会缩水？ 如何挽救？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/19/n14555466.md#1">【梁厨美食】清蒸大红石斑～蒸鱼技巧学起来！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580580.md#1">为何你度假时应该把一枚硬币放在冰箱里？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/11/n14571447.md#1">劝年长者放弃开车? 劝说要有技巧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/20/n14577575.md#1">生前赠与：提早帮助继承人 避免财产纠纷 实现双赢</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/26/n14492521.md#1">【品读唐诗】孟浩然的岘山第一诗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635971.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（下）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650187.md#1">【百年真相】从校园风潮到抗日殉难：杨荫榆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650190.md#1">【直播】川普主持肯尼迪中心荣誉奖章颁奖典礼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650233.md#1">【直播】澳洲和日本国防部长会谈后举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648906.md#1">越来越多人开始出售黄金和白银</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649965.md#1">阿里持续出售旗下资产 已套现300亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649848.md#1">北京白羽鸟“平平”死亡 引政治联想</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649161.md#1">佘诗曼自曝已立遗嘱 逾两亿资产将按意愿分配</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649451.md#1">“F4”回归少1人 换周杰伦、阿信助攻推新歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646628.md#1">提前“做一个动作” 减少收纳的厌烦感</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649505.md#1">和妈妈一起幸福小旅行 ─ 新竹美食篇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648983.md#1">那一滴千年香气： Attar精油为何与众不同？</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/19/n13869142.htm">【中国观察】中共20大报告中的“文化阴谋”</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/11/19/n13869142.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
